--- a/Oripresso/MainView.storyboard
+++ b/Oripresso/MainView.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="52.666666666666657" y="768" width="288" height="50"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="wXf-X8-6Vz">
-                                <rect key="frame" x="0.0" y="242" width="393" height="526"/>
+                                <rect key="frame" x="0.0" y="174" width="393" height="594"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainViewTableCell" id="PKo-eg-hmD" customClass="MainViewTableCell" customModule="Oripresso" customModuleProvider="target">
@@ -34,15 +34,8 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="FHl-j1-v88">
-                                <rect key="frame" x="105.66666666666669" y="103" width="182" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="Jc4-Dn-8x2"/>
-                                    <constraint firstAttribute="width" constant="182" id="W6x-pU-vZ9"/>
-                                </constraints>
-                            </imageView>
                             <segmentedControl opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="l5C-rK-YZj">
-                                <rect key="frame" x="0.0" y="182" width="393" height="32"/>
+                                <rect key="frame" x="0.0" y="123" width="393" height="32"/>
                                 <segments>
                                     <segment title="Coffee"/>
                                     <segment title="Non-Coffee"/>
@@ -93,18 +86,16 @@
                             <constraint firstItem="GGp-Tw-JVC" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="314-SG-7T5"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="kkJ-js-xBF" secondAttribute="trailing" constant="28" id="9fr-Ya-QiX"/>
                             <constraint firstItem="wXf-X8-6Vz" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="CYG-aI-XJ1"/>
-                            <constraint firstItem="FHl-j1-v88" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="H2W-3B-yd6"/>
-                            <constraint firstItem="l5C-rK-YZj" firstAttribute="top" secondItem="FHl-j1-v88" secondAttribute="bottom" constant="29" id="Jbe-4g-ZjZ"/>
+                            <constraint firstItem="l5C-rK-YZj" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="DAi-e4-VZh"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="W8O-wP-jSS" secondAttribute="trailing" constant="24" id="LSm-No-pUk"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="kkJ-js-xBF" secondAttribute="bottom" constant="53" id="M0o-IX-W8v"/>
                             <constraint firstItem="wXf-X8-6Vz" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="UEX-zF-bSa"/>
                             <constraint firstItem="l5C-rK-YZj" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="YMb-Eb-260"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="l5C-rK-YZj" secondAttribute="trailing" id="cg8-vh-BsW"/>
                             <constraint firstItem="GGp-Tw-JVC" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="hsb-lT-S3t"/>
+                            <constraint firstItem="wXf-X8-6Vz" firstAttribute="top" secondItem="l5C-rK-YZj" secondAttribute="bottom" constant="20" id="nGJ-Vf-7Mi"/>
                             <constraint firstItem="l5C-rK-YZj" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="py7-Jn-Maz"/>
-                            <constraint firstItem="FHl-j1-v88" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="rWN-W1-hbc"/>
                             <constraint firstItem="wXf-X8-6Vz" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="sqe-Lt-f8J"/>
-                            <constraint firstItem="wXf-X8-6Vz" firstAttribute="top" secondItem="l5C-rK-YZj" secondAttribute="bottom" constant="29" id="xZW-B8-lb2"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jhv-Xf-fzO"/>
@@ -114,7 +105,6 @@
                         <outlet property="segment" destination="l5C-rK-YZj" id="cyC-CH-D1G"/>
                         <outlet property="selectedLabel" destination="W8O-wP-jSS" id="FN4-Lg-Qzg"/>
                         <outlet property="uiTableView" destination="wXf-X8-6Vz" id="Nxd-vh-kYJ"/>
-                        <outlet property="uiTitle" destination="FHl-j1-v88" id="asx-e9-Omt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -144,7 +134,6 @@
         <image name="cart" width="47" height="47"/>
         <image name="menuSelectBottom" width="288" height="50"/>
         <image name="orangeCircle" width="66" height="66"/>
-        <image name="title" width="182" height="50"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
