feat #25 - Edit CategoryName

--- a/Oripresso/MainView.storyboard
+++ b/Oripresso/MainView.storyboard
@@ -39,7 +39,7 @@
                                 <segments>
                                     <segment title="Coffee"/>
                                     <segment title="Non-Coffee"/>
-                                    <segment title="Cake"/>
+                                    <segment title="Desert"/>
                                     <segment title="Bread"/>
                                 </segments>
                                 <connections>
