#31 - 오타 수정; desert -> dessert

--- a/Oripresso/MainView.storyboard
+++ b/Oripresso/MainView.storyboard
@@ -40,7 +40,7 @@
                                 <segments>
                                     <segment title="Coffee"/>
                                     <segment title="Non-Coffee"/>
-                                    <segment title="Desert"/>
+                                    <segment title="Dessert"/>
                                     <segment title="Bread"/>
                                 </segments>
                                 <connections>
