--- a/Oripresso/Views/Payment.storyboard
+++ b/Oripresso/Views/Payment.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,7 +31,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="MAIN" cornerStyle="capsule">
                                     <backgroundConfiguration key="background">
-                                        <color key="backgroundColor" name="seperatorColor"/>
+                                        <color key="backgroundColor" red="0.8901960784313725" green="0.70196078431372544" blue="0.20392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </backgroundConfiguration>
                                     <fontDescription key="titleFontDescription" name="NanumSquareRoundEB" family="NanumSquareRound" pointSize="24"/>
                                     <color key="baseForegroundColor" red="0.96014052630000002" green="0.9727402329" blue="0.94334322209999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -59,8 +58,5 @@
     <resources>
         <image name="receipt" width="327" height="604"/>
         <image name="underBar" width="288" height="50"/>
-        <namedColor name="seperatorColor">
-            <color red="0.8901960784313725" green="0.70196078431372544" blue="0.20392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
