--- a/Oripresso/Views/Onboard.storyboard
+++ b/Oripresso/Views/Onboard.storyboard
@@ -66,7 +66,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="4tQ-QB-Gxb"/>
                                 </constraints>
-                                <color key="tintColor" name="backGroundColor"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="주문하러 가기">
                                     <backgroundConfiguration key="background">
